<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="device_title">Device Extras</string>
    <string name="device_summary">Adjust device specific settings</string>

    <!-- Display modes -->
    <string name="display_title">Display modes</string>
    <string name="display_summary">Adjust settings and preferences for display</string>
    <string name="srgb_mode_summary"></string>
    <string name="srgb_mode_title">sRGB mode</string>
    <string name="hbm_mode_summary"></string>
    <string name="hbm_mode_title">High brightness mode</string>
    <string name="auto_hbm_summary"></string>
    <string name="auto_hbm_title">Automatic High brightness mode</string>
    <string name="auto_hbm_threshold_title">Automatic High brightness mode threshold (lux)</string>
    <string name="auto_hbm_threshold_summary"></string>
    <string name="dc_mode_summary"></string>
    <string name="dc_mode_title">DC-Dimming</string>
    <string name="dci_mode_summary"></string>
    <string name="dci_mode_title">DCI-P3 wide colour gamut mode</string>
    <string name="wide_mode_summary"></string>
    <string name="wide_mode_title">Wide colour mode</string>
    <string name="panel_category_title">Panel modes</string>
    <string name="panel_category_summary">Modes for panel color correction</string>
    <string name="off_mode_title">Off</string>
    <string name="tile_panel_mode">Panel modes</string>
    <string name="tile_hbm_mode">High brightness modes</string>
    <string name="tile_dc_mode">DC-Dimming</string>

    <!-- Doze -->
    <string name="doze_panel_title">Doze</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="doze_settings_help_title">Help</string>
    <string name="doze_settings_help_text">These features use sensor events to launch a doze notification pulse. The chosen sensor is only enabled when the device receives a notification, this helps to reduce battery usage. There is also an option to enable the chosen sensor as soon as the screen turns off, this will cause higher battery usage.</string>
    <string name="dialog_ok">OK</string>
    <string name="switch_bar_off">Off</string>
    <string name="switch_bar_on">On</string>
    <string name="ambient_display_title">Ambient display</string>
    <string name="ambient_display_always_on_title">Always on</string>
    <string name="ambient_display_always_on_summary">Show time, notification icons, and other info. Increased battery usage.</string>
    <string name="pickup_sensor_title">Pickup sensor</string>
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>
    <string name="raise_to_wake_gesture_title">Raise to wake</string>
    <string name="raise_to_wake_gesture_summary">Wake up the device instead of pulsing notification</string>
    <string name="proximity_sensor_title">Proximity sensor</string>
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>

    <!-- FPS info -->
    <string name="fps_title">Measured FPS</string>
    <string name="fps_info_title">FPS overlay</string>
    <string name="fps_info_summary">Show overlay with with current frames per second</string>

    <!-- Notification slider -->
    <string name="notification_slider_title">Notification slider</string>
    <string name="notification_slider_selection_dialog_title">Action</string>
    <string name="notification_slider_top_position">Top position</string>
    <string name="notification_slider_middle_position">Middle position</string>
    <string name="notification_slider_bottom_position">Bottom position</string>
    <string name="notification_slider_mode_total_silence">Total silence</string>
    <string name="notification_slider_mode_alarms_only">Alarms only</string>
    <string name="notification_slider_mode_priority_only">Priority only</string>
    <string name="notification_slider_mode_silent">Silent</string>
    <string name="notification_slider_mode_vibrate">Vibrate</string>
    <string name="notification_slider_mode_none">Normal</string>
    <string name="buttons_dashboard_summary">Alert Slider Settings</string>

    <!-- Vibration control -->
    <string name="vibrator_title">Vibrator</string>
    <string name="vib_strength_title_head">System Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
    <string name="vib_call_strength_title_head">Call Strength</string>
    <string name="vib_call_strength_summary_head">Define the strength of the vibrator during an incoming call</string>
    <string name="vib_notif_strength_title_head">Notification Strength</string>
    <string name="vib_notif_strength_summary_head">Define the strength of the vibrator during an incoming notification</string>
</resources>
